Creación de entidades para modelamiento de la solución

--- a/XpertGroup.Test.Dominio.Entidades/XpertGroup.Test.Dominio.Entidades.csproj
+++ b/XpertGroup.Test.Dominio.Entidades/XpertGroup.Test.Dominio.Entidades.csproj
@@ -40,7 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuration.cs" />
+    <Compile Include="Cube.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Query.cs" />
+    <Compile Include="Update.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
