--- a/XpertGroup.Test.Services.DependencyResolution/XpertGroup.Test.Services.DependencyResolution.csproj
+++ b/XpertGroup.Test.Services.DependencyResolution/XpertGroup.Test.Services.DependencyResolution.csproj
@@ -49,10 +49,34 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Operator\OperatorInstaller.cs" />
+    <Compile Include="Orchestrator\OrchestratorInstaller.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Data\" />
+    <Folder Include="Validator\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\XpertGroup.Test.Application.Operator\XpertGroup.Test.Application.Operator.csproj">
+      <Project>{53fee699-fc7e-486b-82cf-af5e7b27ccca}</Project>
+      <Name>XpertGroup.Test.Application.Operator</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\XpertGroup.Test.Application.Validator\XpertGroup.Test.Application.Validator.csproj">
+      <Project>{78fd8185-da1d-4374-8638-84cb4052ad21}</Project>
+      <Name>XpertGroup.Test.Application.Validator</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\XpertGroup.Test.Domain.Interfaces\XpertGroup.Test.Domain.Interfaces.csproj">
+      <Project>{597530C1-5B56-4DDB-82BC-5D4CCB0F2C8F}</Project>
+      <Name>XpertGroup.Test.Domain.Interfaces</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\XpertGroup.Test.Services.Orchestrator\XpertGroup.Test.Services.Orchestrator.csproj">
+      <Project>{1b2a4e56-02f5-4d94-b1e2-36dcd70cf896}</Project>
+      <Name>XpertGroup.Test.Services.Orchestrator</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
