--- a/XpertGroupTest/packages.config
+++ b/XpertGroupTest/packages.config
@@ -4,6 +4,8 @@
   <package id="AspNet.ScriptManager.bootstrap" version="3.0.0" targetFramework="net452" />
   <package id="AspNet.ScriptManager.jQuery" version="1.10.2" targetFramework="net452" />
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
+  <package id="Castle.Core" version="4.2.0" targetFramework="net452" />
+  <package id="Castle.Windsor" version="4.1.0" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net452" />
@@ -27,5 +29,6 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Ragolo.Core.IoC" version="1.0.0-rc1" targetFramework="net452" developmentDependency="true" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="Unity" version="5.3.2" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
