--- a/XpertGroup.Test.Application.Validator/XpertGroup.Test.Application.Validator.csproj
+++ b/XpertGroup.Test.Application.Validator/XpertGroup.Test.Application.Validator.csproj
@@ -43,10 +43,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConfigurationValidator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="CubeValidator.cs" />
+    <Compile Include="QueryValidator.cs" />
+    <Compile Include="UpdateValidator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\XpertGroup.Test.Domain.Entities\XpertGroup.Test.Domain.Entities.csproj">
+      <Project>{98EF5D0D-3C34-4E50-B608-3FC451F699D7}</Project>
+      <Name>XpertGroup.Test.Domain.Entities</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
