--- a/XpertGroup.Test.Domain.Entities/XpertGroup.Test.Domain.Entities.csproj
+++ b/XpertGroup.Test.Domain.Entities/XpertGroup.Test.Domain.Entities.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query.cs" />
     <Compile Include="Update.cs" />
+    <Compile Include="ValidationResult.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
